[project]
name = "prediction-prix-immobilier"
version = "0.1.0"
description = "Prédiction du prix de l'immobilier à Ames en Iowa au Etsts-Unis"
authors = [
    {name = "fmazur57u",email = "florianmazur2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "pingouin (>=0.5.5,<0.6.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
